--- a/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/index.html
+++ b/WEBD1003-Day6-Assessment/WEBD1003-Day6-Assessment/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -20,31 +22,38 @@
                 <h2>Team Members</h2>
                 <div class="flex-container">
                     <section>
-                        <img src="" alt="">
-                        <div>
+                        <img src="img/sarah-profile.svg" alt="Sarah profile picture">
+                        <div class="team-member">
                             <h3>Sarah</h3>
-                            <p>Sarah is a senior front-end developer who specializes in clean, responsive UI design. With over eight years of experience in HTML, CSS, and JavaScript frameworks, she’s known for building elegant interfaces that scale. Sarah also mentors junior devs and is always exploring the latest in accessibility and design systems.</p>
+                            <p>Sarah is a senior front-end developer who specializes in clean, responsive UI design.
+                                With over eight years of experience in HTML, CSS, and JavaScript frameworks, she’s known
+                                for building elegant interfaces that scale. Sarah also mentors junior devs and is always
+                                exploring the latest in accessibility and design systems.</p>
                         </div>
                     </section>
                     <section>
-                        <img src="" alt="">
-                        <div>
+                        <img src="img/luis-profile.svg" alt="Luis profile picture">
+                        <div class="team-member">
                             <h3>Luis</h3>
-                            <p>Luis is a product manager focused on creating user-centered digital experiences. He helps teams align strategy with execution.</p>
+                            <p>Luis is a product manager focused on creating user-centered digital experiences. He helps
+                                teams align strategy with execution.</p>
                         </div>
                     </section>
                     <section>
-                        <img src="" alt="">
-                        <div>
+                        <img src="img/jonah-profile.svg" alt="Jonah profile picture">
+                        <div class="team-member">
                             <h3>Jonah</h3>
                             <p>Jonah builds machine learning models that turn data into insights.</p>
                         </div>
                     </section>
                     <section>
-                        <img src="" alt="">
-                        <div>
+                        <img src="img/amira-profile.svg" alt="Amira profile picture">
+                        <div class="team-member">
                             <h3>Amira</h3>
-                            <p>Amira brings a decade of experience in cloud infrastructure. As a DevOps engineer, she designs and maintains scalable systems that support fast, secure development. She’s passionate about making complex systems reliable, and she’s a go-to expert on Kubernetes, and CI/CD pipelines.</p>
+                            <p>Amira brings a decade of experience in cloud infrastructure. As a DevOps engineer, she
+                                designs and maintains scalable systems that support fast, secure development. She’s
+                                passionate about making complex systems reliable, and she’s a go-to expert on
+                                Kubernetes, and CI/CD pipelines.</p>
                         </div>
                     </section>
                 </div>
@@ -99,9 +108,12 @@
 
     <footer>
         <div class="container">
-            <p>© 2026 Bluepeak Digital. This website is for educational purposes only.  All content is fictional and created for learning and demonstration.</p>
-            <cite>ChatGPT. “Create bios for staff and three services for a tech firm .” OpenAI, 24 July 2025, chat.openai.com.</cite>
+            <p>© 2026 Bluepeak Digital. This website is for educational purposes only. All content is fictional and
+                created for learning and demonstration.</p>
+            <cite>ChatGPT. “Create bios for staff and three services for a tech firm .” OpenAI, 24 July 2025,
+                chat.openai.com.</cite>
         </div>
     </footer>
 </body>
+
 </html>
